objects/CountrySelection__c.object
<CustomObject>
    <description>This object is used for WRF-POLK.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Country/Territory</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Bosnia-Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>Iceland</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Iran</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Israel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataType__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Data Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global VIO</fullName>
                </value>
                <value>
                    <fullName>NA VIO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Geography</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>Market Level</fullName>
                </value>
                <value>
                    <fullName>NUTS Level 1</fullName>
                </value>
                <value>
                    <fullName>NUTS Level 2</fullName>
                </value>
                <value>
                    <fullName>NUTS Level 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ISOCode__c</fullName>
        <description>Created as part of SFDC-4118. To Capture ISO Code of the country</description>
        <label>ISO Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC-1558 Store the legacy ID from Polk Salesforce</description>
        <externalId>true</externalId>
        <inlineHelpText>Store the legacy ID from Polk Salesforce</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>America North</fullName>
                </value>
                <value>
                    <fullName>America South</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Europe Central</fullName>
                </value>
                <value>
                    <fullName>Europe East</fullName>
                </value>
                <value>
                    <fullName>Europe West</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>Oceania</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequestType__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Request Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data Extract</fullName>
                </value>
                <value>
                    <fullName>Data Extract Global VIO (PARC)</fullName>
                </value>
                <value>
                    <fullName>Data Extract North America</fullName>
                </value>
                <value>
                    <fullName>Mapping</fullName>
                </value>
                <value>
                    <fullName>MarketInsight System</fullName>
                </value>
                <value>
                    <fullName>MarketInsight VIO System</fullName>
                </value>
                <value>
                    <fullName>New Reg System</fullName>
                </value>
                <value>
                    <fullName>Scrapage</fullName>
                </value>
                <value>
                    <fullName>WorldView Global VIO</fullName>
                </value>
                <value>
                    <fullName>WorldView OE Parts Research</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VehicleType__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Vehicle Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CARS</fullName>
                </value>
                <value>
                    <fullName>HCV</fullName>
                </value>
                <value>
                    <fullName>LCV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WorkRequestForm__c</fullName>
        <description>Master-Detail field as there is no country selection without a WRF, and should there ever be a need to delete a WRF we can take advantage of the cascade deletion of child records.</description>
        <label>Work Request Form</label>
        <referenceTo>WorkRequestForm__c</referenceTo>
        <relationshipLabel>Country Selections</relationshipLabel>
        <relationshipName>CountrySelections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Country Selection</label>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Country Selections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>